# minion-code

./: .gitignore  AGENTS.md  CLAUDE_CODE_PROMPTS.md  LLM_CONFIG.md  README.md  README_TESTING.md  SETUP.md  TOOLS.md  TUI_COMPARISON.md  TUI_GUIDE.md  TUI_ORIGINAL_DESIGN.md  pyproject.toml  pytest.ini  setup_env.sh  test_gpt52_stop_seq.py  test_manual_file_read.py  test_standalone.py
.github/workflows/: ci.yml
.obsidian/: workspace.json
docs/: ADAPTER_IMPLEMENTATION.md  AGENT_EDIT_TOOLS.md  EDIT_TOOLS.md  FILE_READ_TOOL_ENHANCEMENTS.md  IMPLEMENTATION_SUMMARY.md  MCP_GUIDE.md  TODO_FILE_REFACTOR_SUMMARY.md  TODO_FILE_UTILS.md
examples/: advance_tui.py  advanced_textual_tui.py  agent_with_todos.py  async_tool_example.py  auto_compact_example.py  cli_entrypoint.py  console_demo.py  file_freshness_example.py  file_watching_example.py  gradio_demo.py  interruptible_tui.py  mcp_config.json  message_response_children_demo.py  minion_agent_tui.py  repl_tui.py  rich_example.py  simple_file_watching.py  simple_tui.py  simple_usage.py  start.py  test_agent_integration.py  textual_demo.py  todo_example.py  tool_usage_example.py
examples/components/: agent_with_todos.py  message_response_children_demo.py  messages_component.py
examples/skills/: example_usage.py
minion_code/: __init__.py  cli.py  cli_simple.py  const.py  runtime_paths.py  session_mode_controller.py  type_defs.py
minion_code/acp/: __init__.py  agent.py  hooks.py  main.py
minion_code/acp_server/: __init__.py  agent.py  auth.py  hooks.py  main.py  permissions.py  session_modes.py  test_client.py
minion_code/adapters/: __init__.py  output_adapter.py  rich_adapter.py  textual_adapter.py
minion_code/agents/: __init__.py  code_agent.py  hooks.py
minion_code/commands/: __init__.py  clear_command.py  help_command.py  history_command.py  mcp_command.py  mode_command.py  model_command.py  quit_command.py  resume_command.py  skill_command.py  status_command.py  tools_command.py  version_command.py
minion_code/components/: ConfirmDialog.py  Message.py  MessageResponse.py  Messages.py  PromptInput.py  __init__.py
minion_code/screens/: REPL.py  __init__.py
minion_code/services/: __init__.py  event_system.py  file_freshness_service.py
minion_code/skills/: __init__.py  skill.py  skill_loader.py
minion_code/subagents/: __init__.py  subagent.py  subagent_loader.py  subagent_registry.py
minion_code/tools/: __init__.py  base_tool.py  bash_tool.py  default_tools.py  file_edit_tool.py  file_edit_tool_new.py  file_read_tool.py  file_write_tool.py  final_answer_tool.py  glob_tool.py  grep_tool.py  ls_tool.py  multi_edit_tool.py  python_interpreter_tool.py  skill_tool.py  task_cancel_tool.py  task_list_tool.py  task_output_tool.py  task_status_tool.py  task_tool.py  todo_read_tool.py  todo_write_tool.py  user_input_tool.py  visit_webpage_tool.py  web_search_tool.py  wikipedia_search_tool.py
minion_code/utils/: __init__.py  auto_compact_core.py  background_tasks.py  config.py  conversation_runtime.py  history.py  logs.py  mcp_loader.py  output_truncator.py  runtime_paths.py  search_backend.py  session_storage.py  step_status.py  (+2 more)
tests/: test_acp_modes.py  test_adapter.py  test_adapter_simple.py  test_basic.py  test_cli_mcp.py  test_conversation_runtime.py  test_file_read_tool.py  test_local_modes.py  test_mcp_command.py  test_mcp_loader.py  test_prompt_input.py  test_readonly_tools.py  test_repl_modes.py  test_runtime_paths.py  test_skills.py  test_tools.py
(+17 files in other folders)
