[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minion-code"
version = "0.1.0"
description = "A Python project depending on minion"
authors = [{name = "User", email = "user@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "minionx",
    "typer>=0.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy"
]
tui = [
    "textual>=0.40.0",
    "rich>=13.0.0"
]
agent = [
    "openai>=1.0.0"
]

[project.scripts]
mc = "examples.interruptible_tui:run"
mcode = "examples.interruptible_tui:run"
minion-code = "examples.interruptible_tui:run"

[tool.setuptools.packages.find]
where = ["."]