[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minion-code"
version = "0.1.8"
description = "A Python project depending on minion"
authors = [{name = "User", email = "user@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "minionx",
    "typer>=0.9.0",
    "Pillow>=10.0.0",
    "nest-asyncio>=1.5.0",
    "agent-client-protocol>=0.7.0",
    "anthropic>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy"
]
tui = [
    "textual>=0.40.0",
    "rich>=13.0.0"
]
agent = [
    "openai>=1.0.0"
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0"
]

[project.scripts]
# TUI interface (default, with Textual)
mc = "minion_code.cli:run"
mcode = "minion_code.cli:run"
minion-code = "minion_code.cli:run"
# Simple console interface (no TUI dependencies)
mcode-simple = "minion_code.cli_simple:run"
hi = "minion_code.cli_simple:run"
[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
no_implicit_optional = false
warn_unused_ignores = false
check_untyped_defs = false
disable_error_code = ["var-annotated", "assignment", "arg-type", "attr-defined", "union-attr", "index", "operator", "no-redef", "abstract", "call-arg", "syntax", "import-untyped", "valid-type", "misc"]

[[tool.mypy.overrides]]
module = ["yaml", "yaml.*", "watchdog", "watchdog.*", "textual", "textual.*", "pydantic", "pydantic.*", "loguru", "loguru.*", "psutil", "minion", "minion.*"]
ignore_missing_imports = true
ignore_errors = true